--- a/bmnd/app/src/main/res/layout/activity_main.xml
+++ b/bmnd/app/src/main/res/layout/activity_main.xml
@@ -13,29 +13,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone" />
-    <TextView
-        android:id="@+id/tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background"
+        android:background="@drawable/bg"
         android:gravity="bottom"
         android:orientation="vertical">
+
         <Button
             android:id="@+id/btnDisconnect"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#049A8C"
+            android:backgroundTint="@color/colorPrimary"
             android:onClick="onClick"
             android:text="@string/btnConnect" />
+
         <Button
             android:id="@+id/btnConnect"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#049A8C"
+            android:backgroundTint="@color/colorPrimary"
             android:onClick="onClick"
             android:text="@string/btnCompte" />
     </LinearLayout>
