--- a/bmnd/app/src/main/res/values/colors.xml
+++ b/bmnd/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#89469A</color>
+    <color name="colorPrimaryDark">#66439B</color>
+    <color name="colorAccent">#F44336</color>
+    <color name="orange">#D19844</color>
+    <color name="prune">#680124</color>
+    <color name="darkblue">#03363E</color>
+    <color name="lightblue">#049E77</color>
+
 </resources>
