add 2 pages client
""

--- a/bmnd/app/src/main/res/values/colors.xml
+++ b/bmnd/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="prune">#680124</color>
     <color name="darkblue">#03363E</color>
     <color name="lightblue">#049E77</color>
-
+    <color name="lightGrey">#B4A9C7</color>
 </resources>
