--- a/bmnd/app/src/main/res/layout/activity_profil_client.xml
+++ b/bmnd/app/src/main/res/layout/activity_profil_client.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
 
@@ -11,13 +11,9 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imageView4"
@@ -26,132 +22,122 @@
             app:srcCompat="@drawable/text_bmnd" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/tvAdressResult"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="118dp"
-        android:text="5 Rue d'Alsace Lorraine"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/btModifierDonnes"
-        app:layout_constraintStart_toStartOf="@+id/tvAdress"
-        app:layout_constraintTop_toBottomOf="@+id/tvEmailResult" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvEmailResult"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginBottom="71dp"
-        android:text="helena89@gmail.com"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/tvAdressResult"
-        app:layout_constraintStart_toStartOf="@+id/tvEmail"
-        app:layout_constraintTop_toBottomOf="@+id/tvTelephoneResult" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tvTelephoneResult"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="65dp"
-        android:text="06 06 25 14 89 "
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/tvEmailResult"
-        app:layout_constraintStart_toStartOf="@+id/tvTelephone"
-        app:layout_constraintTop_toBottomOf="@+id/tvTelephone" />
+            <LinearLayout
+                android:layout_width="227dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="14dp"
-        android:text="e-mail "
-        android:textColor="#B4A9C7"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/tvEmailResult"
-        app:layout_constraintStart_toStartOf="@+id/tvTelephoneResult" />
+                <TextView
+                    android:id="@+id/tvNom"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginRight="50dp"
+                    android:text="Nom"
+                    android:textColor="#B4A9C7"
+                    android:textSize="24sp" />
 
-    <TextView
-        android:id="@+id/tvTelephone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="59dp"
-        android:layout_marginBottom="9dp"
-        android:text="Téléphone "
-        android:textColor="#B4A9C7"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/tvTelephoneResult"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/photoClient" />
+                <TextView
+                    android:id="@+id/tvNomResult"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginRight="50dp"
+                    android:text="Helena"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="24sp" />
+            </LinearLayout>
 
-    <TextView
-        android:id="@+id/tvAdress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="13dp"
-        android:text="Adresse"
-        android:textColor="#B4A9C7"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/tvAdressResult"
-        app:layout_constraintStart_toStartOf="@+id/tvEmailResult" />
+            <ImageView
+                android:id="@+id/photoClient"
+                android:layout_width="134dp"
+                android:layout_height="104dp"
+                app:srcCompat="@drawable/logo" />
 
-    <ImageView
-        android:id="@+id/photoClient"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="141dp"
-        android:layout_marginEnd="29dp"
-        android:layout_marginBottom="11dp"
-        app:layout_constraintBottom_toTopOf="@+id/tvTelephone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tvNom"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_gallery" />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/tvNomResult"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:text="Helena"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/tvNom"
-        app:layout_constraintTop_toBottomOf="@+id/tvNom" />
+        <TextView
+            android:id="@+id/tvTelephone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:text="Téléphone "
+            android:textColor="#B4A9C7"
+            android:textSize="24sp" />
 
-    <TextView
-        android:id="@+id/tvNom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="59dp"
-        android:layout_marginTop="141dp"
-        android:layout_marginEnd="137dp"
-        android:text="Nom"
-        android:textColor="#B4A9C7"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/photoClient"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/tvTelephoneResult"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:text="06 06 25 14 89 "
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="24sp" />
 
-    <Button
-        android:id="@+id/btModifierDonnes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="27dp"
-        android:layout_marginBottom="35dp"
-        android:backgroundTint="@color/colorPrimary"
-        android:onClick="onBtModifierDonnesClick"
-        android:text="Modifier mes données"
-        android:textAllCaps="true"
-        android:textColor="#E6E1F8"
-        android:textColorHighlight="#8D6EC3"
-        android:textColorHint="#8D6EC3"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvAdressResult" />
+        <TextView
+            android:id="@+id/tvEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="15dp"
+            android:text="e-mail "
+            android:textColor="#B4A9C7"
+            android:textSize="24sp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/tvEmailResult"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:text="helena89@gmail.com"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/tvAdress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="15dp"
+            android:text="Adresse"
+            android:textColor="#B4A9C7"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/tvAdressResult"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:text="5 Rue d'Alsace Lorraine"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="24sp" />
+
+        <Button
+            android:id="@+id/btModifierDonnes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="80dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:onClick="onBtModifierDonnesClick"
+            android:text="Modifier mes données"
+            android:textAllCaps="true"
+            android:textColor="#E6E1F8"
+            android:textColorHighlight="#8D6EC3"
+            android:textColorHint="#8D6EC3"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
+</LinearLayout>
